# sdl3-gpu-c

./: CMakeLists.txt  README.md  build.ps1
shaders/: shader.glsl.vert
shaders/compiled/: shader.frag.spv  shader.vert.spv
src/: asset.c  asset.h  common.h  game.c  game.h  gpu.c  gpu.h  linalg.c  linalg.h  main.c  shader.c  shader.h
src/lib/: fast_obj.c  fast_obj.h  linalg.c  linalg.h  stb_image.c
